# AndroidOgreTest

./: build.gradle  gradle.properties
app/: CMakeLists.txt  build.gradle
app/libs/ogre/: CMakeLists.txt
app/libs/ogre/CMake/: CMakeLists.txt  ConfigureBuild.cmake  Dependencies.cmake
app/libs/ogre/CMake/Utils/: OgreAddTargets.cmake
app/libs/ogre/Components/: CMakeLists.txt
app/libs/ogre/Components/MeshLodGenerator/: CMakeLists.txt
app/libs/ogre/Components/Overlay/: CMakeLists.txt
app/libs/ogre/OgreMain/: CMakeLists.txt
app/libs/ogre/OgreMain/include/: OgreCamera.h
app/libs/ogre/OgreMain/src/: OgreCamera.cpp  OgrePlatformInformation.cpp
app/libs/ogre/PlugIns/: CMakeLists.txt
app/libs/ogre/PlugIns/ParticleFX/: CMakeLists.txt
app/libs/ogre/RenderSystems/: CMakeLists.txt
app/libs/ogre/RenderSystems/GLES/: CMakeLists.txt
app/libs/ogre/RenderSystems/GLES/src/EGL/: OgreEGLRenderTexture.cpp  OgreEGLWindow.cpp
app/libs/ogre/RenderSystems/GLES/src/EGL/Android/: OgreAndroidEGLWindow.cpp
app/libs/ogre/RenderSystems/GLES2/: CMakeLists.txt
app/libs/ogre/RenderSystems/GLES2/include/: OgreGLES2Prerequisites.h
app/libs/ogre/RenderSystems/GLES2/src/EGL/Android/: OgreAndroidEGLWindow.cpp
app/libs/ogredeps/: CMakeLists.txt
app/libs/ogredeps/src/: CMakeLists.txt
app/libs/ogredeps/src/FreeImage/: CMakeLists.txt
app/libs/ogredeps/src/FreeImage/Source/LibRawLite/internal/: dcraw_common.cpp
app/libs/ogredeps/src/freetype/: CMakeLists.txt
app/libs/ogredeps/src/ois/: CMakeLists.txt
app/libs/ogredeps/src/zziplib/: CMakeLists.txt
app/src/androidTest/java/com/example/ogretest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: resources.cfg
app/src/main/assets/Materials/: Base.material  Ogre.material
app/src/main/assets/Materials/Programs/: Base.program  BaseColorFP.glsles  BaseTexFP.glsles  BaseVP.glsles  LightTexFP.glsles
app/src/main/assets/Models/: ogrehead.mesh.xml
app/src/main/assets/Particles/: Rain.particle
app/src/main/cpp/: AndroidBridge.cpp  AndroidBridge.h  EventQueue.cpp  EventQueue.h  ICameraFrameListener.cpp  ICameraFrameListener.h  IEvent.cpp  IEvent.h  IEventFwd.h  IFrameListener.cpp  IFrameListener.h  IFrameListenerFwd.h  InputEvent.cpp  InputEvent.h  InputEventFwd.h  JNIBridge.cpp  NativeBridge.cpp  NativeBridge.h  NativeMain.cpp  OgreEnv.cpp  OgreEnv.h
app/src/main/cpp/Camera/: MayaCamera.cpp  MayaCamera.h
app/src/main/cpp/Event/: SysEvent.h
app/src/main/cpp/JNI/: JNI_RenderEngine.cpp
app/src/main/cpp/SceneListener/: DummySceneListener.cpp  DummySceneListener.h
app/src/main/java/com/example/ogretest/: JavaBridge.java  OgreActivity.java  OgreView.java  RenderEngine.java  StartActivity.java
app/src/main/res/layout/: start_activity_layout.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/ogretest/: ExampleUnitTest.java
